# sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: macro.cmake
ideas/: CMakeLists.txt  cpp-lua.cpp  cppFromLua.cpp  cppFromLua.lua  cppMixLua.cpp  luaFromCpp.lua
ideas/data/: testShape.txt  words.txt
ideas/events/: CMakeLists.txt  Emitter.hpp  Event.hpp  EventBus.hpp  EventHandler.hpp  VEvent.cpp  VEvent.hpp  VEventHandler.hpp  main.cpp
ideas/lua/: CMakeLists.txt  cppFromLua.cpp  cppMixLua.cpp  cppMixLua.lua  luaFromCpp.cpp
ideas/py+cpp/: main.cpp
ideas/python/: create_words.py  from_dict.py  sentence_match.py  smtp_email.py  stt.py  templating.py
ideas/python-android/: README.md  buildozer.spec
ideas/python-android/gps_compas/: main.py
ideas/python-android/stt/: build.gradle  build.tmpl.gradle  buildozer.spec  main.py  microphone.py
ideas/python-android/stt/data/vosk/: vosk_api.h
ideas/python-android/stt/stt/: vosk_wrapper.py
ideas/python-android/stt/wrappervosk/: __init__.py  android.py
ideas/python-android/tts/: main.py
ideas/python-android/tts/examples/speech2text/: main.py
ideas/python-music/: soundplayer.py
ideas/python-proxy/pyproxy/: main.py  proxy.py
ideas/python-proxy/pyproxy/facades/: __init__.py  os.py
ideas/python-tts/: requirements.txt  speech.py  stem.py
ideas/sfml/: CMakeLists.txt  raycasting.cpp
ideas/shadows/: AllInclude.h  CMakeLists.txt  Constructs.cpp  Constructs.h  ConvexHull.cpp  ConvexHull.h  Light.cpp  Light.h  LightSystem.cpp  LightSystem.h  SDLOpenGL.cpp  SDLOpenGL.h  SFMLOpenGL.cpp  SFMLOpenGL.h  Utilities.cpp  Utilities.h  main.cpp
